grammar.js
        nu_script: $ => seq(
            optional($.shebang),
            repeat(choice(
                $._declaration,
                // NOTE:
                // in a script, this is not a legal top level item, this is
                // only here to cover `config.nu` and `env.nu`
                prec(-1, $._statement),
            ))
        ),

        cmd_identifier: $ => token(/[_\p{XID_Start}][_\-\p{XID_Continue}]*/),

        _declaration: $ => seq(
            choice(
                $.decl_alias,
                $.decl_def,
                $.decl_export,
                $.decl_extern,
                $.decl_module,
                $.decl_use,
            ),
            optional($._terminator),
        ),

        _statement: $ => seq(
            choice(
                $._control,
                $._stmt_hide,
                $._stmt_overlay,
                $.stmt_let,
                $.stmt_mut,
                $.stmt_const,
                $.stmt_register,
                $.stmt_source,
                $.assignment,
                $.pipeline
            ),
            optional($._terminator),
        ),

        /// Controls

        _ctrl_expression: $ => choice(
            field("ctrl_break", KEYWORD().break),
            field("ctrl_continue", KEYWORD().continue),
            $.ctrl_do,
            $.ctrl_if,
            $.ctrl_try,
            $.ctrl_match,
            $.ctrl_return,
        ),

        // Standalone Controls

        pipeline: $ => prec(-69, seq(
            $.pipe_element,
            repeat(seq(
                PUNC().pipe,
                $.pipe_element
            )),
        )),

        pipe_element: $ => prec(-1, choice(
            prec.right(69, $._expression),
            $._ctrl_expression,
            $.where_command,
            $.command,
        )),

        // the where command has a unique argument pattern that breaks the
        // general command parsing, so we handle it separately
        _expression: $ => choice(
            $._value,
            $.expr_binary,
            $.expr_unary,
            $.val_range,
            $.expr_parenthesized,
        ),

        /// Composite Expressions

        val_string: $ => choice(
            $._str_double_quotes,
            $._str_single_quotes,
            $._str_back_ticks,
        ),

        _str_double_quotes: $ => seq(
            '"',
            repeat(choice(
                $._escaped_str_content,
                // double quoted strings accept escapes
                $.escape_sequence,
            )),
            '"',
        ),

        _str_single_quotes: $ => /'[^']*'/,

        _str_back_ticks: $ => /`[^`]*`/,

        escape_sequence: $ => token.immediate(seq(
            "\\",
            choice(
                /[^xu]/,
                /u[0-9a-fA-F]{4}/,
                /u{[0-9a-fA-F]+}/,
                /x[0-9a-fA-F]{2}/
            ),
        )),

        /// String Interpolation

        val_interpolated: $ => choice(
            $._inter_single_quotes,
            $._inter_double_quotes,
        ),

        escaped_interpolated_content: $ => token.immediate(prec(1, /[^"\\(]/)),

        unescaped_interpolated_content: $ => token.immediate(prec(1, /[^'(]/)),

        _inter_single_quotes: $ => seq(
            "$'",
            repeat(choice(
                field("expr", $.expr_interpolated),
                $.unescaped_interpolated_content,
            )),
            token.immediate("'"),
        ),

        _inter_double_quotes: $ => seq(
            '$"',
            repeat(choice(
                field("expr", $.expr_interpolated),
                $.inter_escape_sequence,
                // double quoted strings accept escapes
                $.escaped_interpolated_content,
            )),
            token.immediate('"'),
        ),

        inter_escape_sequence: $ => token.immediate(
            seq(
                "\\",
                choice(
                    /[^xu]/,
                    /u[0-9a-fA-F]{4}/,
                    /u{[0-9a-fA-F]+}/,
                    /x[0-9a-fA-F]{2}/,
                    "(", // TODO 
                ),
            )
        ),

        expr_interpolated: $ => seq(
            BRACK().open_paren,
            repeat($._statement),
            BRACK().close_paren,
        ),

        /// Collections

        val_list: $ => seq(
            BRACK().open_brack,
            repeat(field(
                "item",
                seq(
                    choice($._expression, alias($.cmd_identifier, $.val_string)),
                    optional(PUNC().comma)
                ),
            )),
            BRACK().close_brack,
            optional($.cell_path),
        ),

        command: $ => prec.right(10, choice(
            $.cmd_head,
            $.cmd_head_sub,
        )),
